--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <li><a href="#services" class="scroll-link">Serviços</a></li>
           <li><a href="#work" class="scroll-link">Portfolio</a></li>
           <li><a href="#team" class="scroll-link">Time</a></li>
-          <li><a href="#contactUs" class="scroll-link">Fale Conodco</a></li>
+          <li><a href="#contactUs" class="scroll-link">Fale Conosco</a></li>
         </ul>
       </div>
       <!--/.navbar-collapse--> 
@@ -53,7 +53,7 @@
 <section id="home">
   <div class="banner-container" > <img src="https://images.unsplash.com/photo-1516937941344-00b4e0337589?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="banner" style="opacity: .5;"/>
     <div class="container banner-content">
-      <div class="hero-text animated fadeInDownBig" > <a href="#" class="scroll-top logo animated bounceInLeft" "><img src="./images/VK_brand.svg" style="height: 8rem;" alt="" srcset=""></a>
+      <div class="hero-text animated fadeInDownBig" > <a href="#" class="scroll-top logo animated bounceInLeft" "><img src="./images/VK_brand.png" style="height: 12rem;" alt="" srcset=""></a>
         <h1 class="responsive-headline" style="font-size: 40px;">Levando solução para <br/>
           os seus problemas.</h1>
         <a href="#basics" class="arrow-link"> <i class="fa fa-chevron-down fa-2x"></i> </a> 
