--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       
       <!-- PHONE IMAGE -->
       <div class="col-md-4 col-sm-4">
-        <div class="phone-image wow"> <img src="images/single-iphone.png" alt=""> </div>
+        <div class="phone-image wow"> <img src="./images/single-iphone.png" alt="Homens trabalhando na manutenção industrial" class="featureImage"> </div>
       </div>
       
       <!-- FEATURES RIGHT -->
@@ -240,45 +240,68 @@
     <div class="heading text-center"> 
       <!-- Heading -->
       <h2>Serviços</h2>
-      <p>At lorem Ipsum available, but the majority have suffered alteration in some form by injected humour.</p>
+      <p></p>
     </div>
     <div class="serviceBox">
       <div class="row">
         <div class="col-md-4 col-sm-4">
-          <h3><i class="fa fa-desktop color"></i>&nbsp; User Experiance</h3>
+          <h3><i class="fa fa-desktop color"></i>&nbsp; Serviços de Manutenção Industrial</h3>
           <!-- Paragraph -->
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <ul>
+            <li>Manutenção preventiva e corretiva de equipamentos industriais.</li>
+            <li>Troca de revestimento em moinhos verticais e horizontais.</li>
+            <li>Manutenção em filtros de mangas, resfriadores, britadores.</li>
+            <li>Troca e manutenção em ventiladores.</li>
+            <li>Manutenção e instalação de elevadores de corrente e caneca.</li>
+          </ul>
         </div>
         <div class="col-md-4 col-sm-4"> 
           <!-- Heading -->
-          <h3><i class="fa fa-cloud color"></i>&nbsp;Story Board</h3>
+          <h3><i class="fa fa-cloud color"></i>&nbsp;Gestão e Planejamento de Manutenção</h3>
           <!-- Paragraph -->
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <ul>
+            <li>Planejamento e Controle de Manutenção (PCM).</li>
+            <li>Fornecimento de mão de obra qualificada para serviços de manutenção industrial.</li>
+            <li>Automação e instrumentação industrial para otimização dos processos de manutenção.</li>
+          </ul>
         </div>
         <div class="col-md-4 col-sm-4"> 
           <!-- Heading -->
-          <h3><i class="fa fa-home color"></i>&nbsp;Wireframes</h3>
+          <h3><i class="fa fa-home color"></i>&nbsp;Serviços de Caldeiraria e Montagem Industrial</h3>
           <!-- Paragraph -->
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <ul>
+            <li>Caldeiraria Industrial, Estrutura Metálica e Tubulação.</li>
+            <li>Montagens industriais para instalação e integração de equipamentos.</li>
+          </ul>
         </div>
       </div>
       <div class="row">
         <div class="col-md-4 col-sm-4">
-          <h3><i class="fa fa-desktop color"></i>&nbsp;Information</h3>
+          <h3><i class="fa fa-desktop color"></i>&nbsp;Serviços de Limpeza e Manutenção</h3>
           <!-- Paragraph -->
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <ul>
+            <li>Limpeza industrial, incluindo pré e pós-paradas de manutenção.</li>
+            <li>Limpeza de áreas administrativas.</li>
+            <li>Fornecimento de mão de obra especializada para serviços de limpeza e manutenção.</li>
+          </ul>
         </div>
         <div class="col-md-4 col-sm-4"> 
           <!-- Heading -->
-          <h3><i class="fa fa-cloud color"></i>&nbsp;Graphic Design</h3>
+          <h3><i class="fa fa-cloud color"></i>&nbsp;Gestão de Recursos e Serviços</h3>
           <!-- Paragraph -->
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <ul>
+            <li>Gerenciamento completo de recursos, incluindo mão de obra e equipamentos.</li>
+            <li>Prestação de serviços de limpeza, manutenção e locação de equipamentos como soluções integradas para clientes industriais.</li>
+          </ul>
         </div>
         <div class="col-md-4 col-sm-4"> 
           <!-- Heading -->
-          <h3><i class="fa fa-home color"></i>&nbsp;User Interface</h3>
+          <h3><i class="fa fa-home color"></i>&nbsp;Locação de Equipamentos Pesados</h3>
           <!-- Paragraph -->
-          <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          <ul>
+            <li>Locação de máquinas pesadas, como mini carregadeiras e retroescavadeiras.</li>
+            <li>Fornecimento de equipamentos para atender às necessidades específicas dos clientes.</li>
+          </ul>
         </div>
       </div>
     </div>
@@ -339,8 +362,8 @@
   <div class="container">
     <div class="heading text-center"> 
       <!-- Heading -->
-      <h2>Time</h2>
-      <p>At variations of passages of Lorem Ipsum available, but the majority have suffered alteration..</p>
+      <h2>Nosso Time de Especialistas</h2>
+      <p>Pessoas com expertise para trazer os melhores resultados</p>
     </div>
     <!-- Team Member's Details -->
     <div class="team-content">
